fix body overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
 body {
+  overflow: hidden;
   overscroll-behavior: none;
 }
